Add DaoJdbc for Category, Type and Tool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=NutriFusionFood
 server.port=8081
+nutrifusionfood.datasource.url= jdbc:mysql://localhost:3306/nutrifusionfood?serverTimezone=UTC
+nutrifusionfood.datasource.username = adminNFF
+nutrifusionfood.datasource.password = NutriFusionFood%
