--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8081
 nutrifusionfood.datasource.url= jdbc:mysql://localhost:3306/nutrifusionfood?serverTimezone=UTC
 nutrifusionfood.datasource.username = adminNFF
 nutrifusionfood.datasource.password = NutriFusionFood%
+daoimpl = jdbc
+lang = es
