--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ nutrifusionfood.datasource.url= jdbc:mysql://localhost:3306/nutrifusionfood?serv
 nutrifusionfood.datasource.username = adminNFF
 nutrifusionfood.datasource.password = NutriFusionFood%
 daoimpl = jdbc
-lang = es
+lang = en
