--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 nutrifusionfood.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1
 nutrifusionfood.datasource.username=sa
 nutrifusionfood.datasource.password=sa
+daoimpl = jdbc
