Create main thymeleaf and controller functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ nutrifusionfood.datasource.url= jdbc:mysql://localhost:3306/nutrifusionfood?serv
 nutrifusionfood.datasource.username = adminNFF
 nutrifusionfood.datasource.password = NutriFusionFood%
 daoimpl = jdbc
+spring.mvc.hiddenmethod.filter.enabled=true
