modify test and appproperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 spring.application.name=NutriFusionFood
-server.port=8081
-nutrifusionfood.datasource.url= jdbc:mysql://localhost:3306/nutrifusionfood?serverTimezone=UTC
-nutrifusionfood.datasource.username = adminNFF
-nutrifusionfood.datasource.password = NutriFusionFood%
-daoimpl = jdbc
+spring.profiles.active=prod
 spring.mvc.hiddenmethod.filter.enabled=true
