Modify test user service impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=NutriFusionFood
-spring.profiles.active=dev
+spring.profiles.active=prod
 spring.mvc.hiddenmethod.filter.enabled=true
