--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=NutriFusionFood
 server.port=5000
-nutrifusionfood.datasource.url= jdbc:mysql://bbddnff.c47fhsxvpkwm.us-east-1.rds.amazonaws.com/nutrifusionfood
+nutrifusionfood.datasource.url= jdbc:mysql://bbddnff.cprxlrxm9atb.us-east-1.rds.amazonaws.com/nutrifusionfood
 nutrifusionfood.datasource.username = adminNFF
-nutrifusionfood.datasource.password = NutriFusionFood%
+nutrifusionfood.datasource.password = NutriFusiobbddnff.cprxlnFood%
 daoimpl = jdbc
 spring.mvc.hiddenmethod.filter.enabled=true
